--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
 
   <main class="container">
     <div class="background">
-      <div class="background__gradient"></div>
-      <div class="background__pink"></div>
+      <p class="background__gradient"></p>
+      <p class="background__pink"></p>
     </div>
 
-  Samuel Green
-  Available to Walk
+    <div class="cellphone">
+      <div class="cellphone__inside">
+
+        <div class="cellphone__topo">
+          <span class="cellphone__user">
+            <span class="cellphone__icon--back"></span>
+            <span class="cellphone__user--pic" aria-label="User image"></span>
+            <p class="cellphone__user--name">Samuel Green</p>
+            <p class="cellphone__user--status">Available to Walk</p>
+            <span class="cellphone__icon--dots"></span>
+          </span>
+        </div>
+        
+  
 
   That sounds great. I’d be happy with that.
 
@@ -44,13 +56,18 @@
 
   Type a message…
 
-  <h1 class="title">Simple booking</h1>
+    </div>
+  </div>
+  
 
-  <p class="paragraph">
-    Stay in touch with our dog walkers through the chat interface. This makes it easy to
-    discuss arrangements and make bookings. Once the walk has been completed you can rate
-    your walker and book again all through the chat.
-  </p>
+  <div class="footer">
+    <h1 class="title">Simple booking</h1>
+    <p class="paragraph">
+      Stay in touch with our dog walkers through the chat interface. This makes it easy to
+      discuss arrangements and make bookings. Once the walk has been completed you can rate
+      your walker and book again all through the chat.
+    </p>
+  </div>
   
   </main>
 </body>
