--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -27,34 +28,35 @@
       <div class="cellphone__inside">
 
         <div class="cellphone__topo">
+          <div class="cellphone__topo--barra"></div>
           <span class="cellphone__user">
-            <span class="cellphone__icon--back"></span>
+            <span class="cellphone__user--icon--back" aria-label="Retornar">chevron_left</span>
             <span class="cellphone__user--pic" aria-label="User image"></span>
             <p class="cellphone__user--name">Samuel Green</p>
             <p class="cellphone__user--status">Available to Walk</p>
-            <span class="cellphone__icon--dots"></span>
+            <span class="cellphone__user--icon--options" aria-label="Opções">more_vert</span>
           </span>
         </div>
         
+        <div class="cellphone__talk">
+          <p class="cellphone__talk--purple">That sounds great. I’d be happy with that.</p>
+          <p class="cellphone__talk--purple">Could you send over some pictures of your dog, please?</p>
+          <p class="cellphone__talk--pics">
+            <p class="cellphone__talk--dogs"></p>
+          </p>
+          <p class="cellphone__talk--white">Here are a few pictures. She’s a happy girl!</p>
+          <p class="cellphone__talk--white">Can you make it?</p>
+          <p class="cellphone__talk--purple">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
+          <p class="cellphone__talk--gradient">30 minute walk
+            $29</p>
+          <p class="cellphone__talk--gradient">1 hour walk
+            $49</p>
+        </div>
   
-
-  That sounds great. I’d be happy with that.
-
-  Could you send over some pictures of your dog, please?
-
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
+        <div class="cellphone__type">
+          <span class="cellphone__type--text">Type a message…</span>
+          <span class="cellphone__type--send"></span>
+        </div>
 
     </div>
   </div>
