--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -42,15 +43,23 @@
           <p class="cellphone__talk--purple">That sounds great. I’d be happy with that.</p>
           <p class="cellphone__talk--purple">Could you send over some pictures of your dog, please?</p>
           <p class="cellphone__talk--pics">
-            <p class="cellphone__talk--dogs"></p>
+            <img src="assets/img/dog-image-1.jpg" alt="Imagem de cachorro" class="cellphone__talk--dogs">
+            <img src="assets/img/dog-image-2.jpg" alt="Imagem de cachorro" class="cellphone__talk--dogs">
+            <img src="assets/img/dog-image-3.jpg" alt="Imagem de cachorro" class="cellphone__talk--dogs">
           </p>
           <p class="cellphone__talk--white">Here are a few pictures. She’s a happy girl!</p>
           <p class="cellphone__talk--white">Can you make it?</p>
           <p class="cellphone__talk--purple">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
-          <p class="cellphone__talk--gradient">30 minute walk
-            $29</p>
-          <p class="cellphone__talk--gradient">1 hour walk
-            $49</p>
+          <p class="cellphone__talk--gradient">
+            <span class="cellphone__talk--gradient--circle">radio_button_unchecked</span>
+            <span class="cellphone__talk--gradient--text">30 minute walk</span>
+            <span class="cellphone__talk--gradient--price">$29</span>
+          </p>
+          <p class="cellphone__talk--gradient">
+            <span class="cellphone__talk--gradient--circle">radio_button_unchecked</span>
+            <span class="cellphone__talk--gradient--text">1 hour walk</span>
+            <span class="cellphone__talk--gradient--price">$49</span>
+          </p>
 
           <div class="cellphone__type">
             <span class="cellphone__type--text">Type a message…</span>
