--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
           <div class="cellphone__type">
             <span class="cellphone__type--text">Type a message…</span>
-            <span class="cellphone__type--send"></span>
+            <span class="cellphone__type--send">chevron_right</span>
           </div>
         </div>
 
