Mobile version done;

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="cellphone">
       <div class="cellphone__inside">
 
-        <div class="cellphone__topo">
+        <header class="cellphone__topo">
           <div class="cellphone__topo--barra"></div>
           <span class="cellphone__user">
             <span class="cellphone__user--icon--back" aria-label="Retornar">chevron_left</span>
@@ -37,16 +37,16 @@
             <p class="cellphone__user--status">Available to Walk</p>
             <span class="cellphone__user--icon--options" aria-label="Opções">more_vert</span>
           </span>
-        </div>
+        </header>
         
-        <div class="cellphone__talk">
+        <main class="cellphone__talk">
           <p class="cellphone__talk--purple">That sounds great. I’d be happy with that.</p>
           <p class="cellphone__talk--purple">Could you send over some pictures of your dog, please?</p>
-          <p class="cellphone__talk--pics">
+          <figure class="cellphone__talk--pics">
             <img src="assets/img/dog-image-1.jpg" alt="Imagem de cachorro" class="cellphone__talk--dogs">
             <img src="assets/img/dog-image-2.jpg" alt="Imagem de cachorro" class="cellphone__talk--dogs">
             <img src="assets/img/dog-image-3.jpg" alt="Imagem de cachorro" class="cellphone__talk--dogs">
-          </p>
+          </figure>
           <p class="cellphone__talk--white">Here are a few pictures. She’s a happy girl!</p>
           <p class="cellphone__talk--white">Can you make it?</p>
           <p class="cellphone__talk--purple">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
@@ -61,25 +61,25 @@
             <span class="cellphone__talk--gradient--price">$49</span>
           </p>
 
-          <div class="cellphone__type">
+          <section class="cellphone__type">
             <span class="cellphone__type--text">Type a message…</span>
-            <span class="cellphone__type--send">chevron_right</span>
-          </div>
-        </div>
+            <span class="cellphone__type--send"><span class="cellphone__type--icon">chevron_right</span></span>
+          </section>
+        </main>
 
+      </div>
     </div>
-  </div>
-  
 
-  <div class="footer">
+
+  <footer class="footer">
     <h1 class="title">Simple booking</h1>
     <p class="paragraph">
       Stay in touch with our dog walkers through the chat interface. This makes it easy to
       discuss arrangements and make bookings. Once the walk has been completed you can rate
       your walker and book again all through the chat.
     </p>
-  </div>
-  
-  </main>
+  </footer>
+</main>
+
 </body>
 </html>
